[package]
name = "boq-shift"
version = "0.0.1"
description = "BOQ Shift Program."
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
mpl-token-metadata = { version="1.11.2", features = [ "no-entrypoint" ] }
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.14.18"
spl-associated-token-account = { version="1.1.3", features = [ "no-entrypoint" ] }
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"

[dev-dependencies]
solana-program-test = "~1.14.18"
solana-sdk = "~1.14.18"

[lib]
name = "boq"
crate-type = ["cdylib", "lib"]